--- a/styles/style.css
+++ b/styles/style.css
@@ -110,7 +110,7 @@
 
 @media screen and (max-width:576px) {
     .navbar,
-    .influencer,
+    .influencer-journey,
     .marketplace{
         flex-direction:column;
         grid-template-columns:1fr;
